--- a/hacker_front/src/component/views/style/RegisterPage.scss
+++ b/hacker_front/src/component/views/style/RegisterPage.scss
@@ -17,7 +17,7 @@
     flex-direction: row;
     width: 1200px;
     height: 575px;
-    box-shadow: 0px 0px 30px #41366c;
+    box-shadow: 0px 0px 30px #2e2650;
   }
   .image-wrapper{
     height: 100%;
@@ -33,7 +33,7 @@
     flex-direction: column;
     width: 50%;
     height: 100%;
-    background-color: #4e3f7c;
+    background-color: #382c60;
     h1 {
       font-size: 50px;
       color: white;
@@ -77,9 +77,12 @@
     margin-top: 30px;
 
     button {
-      width: 150px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 160px;
       height: 50px;
-      background: #4e3f7c;
+      background: transparent;
       font-size: 20px;
       color: white;
       border: 2px solid white;
