--- a/hacker_front/src/component/views/style/Header.scss
+++ b/hacker_front/src/component/views/style/Header.scss
@@ -9,7 +9,7 @@
   left: 0;
   width: 100%;
   height: 60px;
-  background-color: rgb(81, 74, 192);
+  background-color: #382c60;
   color: white;
   display: flex;
 }
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   left: 45%;
-  top: 15%;
+  top: 22%;
   font-size: large;
 }
 
@@ -30,6 +30,7 @@
   align-items: center;
   margin-left: auto;
   margin-right: 30px;
+  width: 45px;
   color: white;
 }
 .logout:after {
@@ -38,9 +39,9 @@
   align-items: center;
   margin-left: auto;
   margin-right: 30px;
-  bottom: 14px;
+  bottom: 20px;
   height: 2px;
-  width: 52px;
+  width: 45px;
   background: rgb(255, 255, 255);
   transform: scaleX(0);
   transition: transform 500ms ease;
