--- a/hacker_front/src/component/views/style/Sidebar.scss
+++ b/hacker_front/src/component/views/style/Sidebar.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
 }
 
-.icon {
+.menu-icon {
   display: flex;
   margin-left: 30px;
   align-items: center;
@@ -18,7 +18,7 @@
   margin-bottom: 15px;
   width: 200px;
 }
-.icon:after {
+.menu-icon:after {
   content: "";
   position: absolute;
   bottom: 13px;
@@ -33,7 +33,7 @@
 }
 
 .sectionClick {
-  background-color: rgb(121, 145, 255);
+  background-color: #a089eb;
   height: 90vh;
   width: 200px;
   transition: 1s ease;
